@@ -1,2 +1,8 @@
 # JavaFX-Calculator
 Calculator made in JavaFX
+
+VM Options
+--module-path
+"C:\Program Files\Java\javafx-sdk-11.0.2\lib"
+--add-modules
+javafx.controls,javafx.fxml
